--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "keymap-display",
   "main": "./lib/keymap-display",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "Displays custom keymaps with a nice interface.",
   "keywords": [
     "keymap",
@@ -19,6 +19,5 @@
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
