--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "version": "0.12.0",
   "description": "Displays custom keymaps with a nice interface.",
   "keywords": [
-    "keymap",
-    "display",
-    "panel",
-    "palette",
+    "keybindings",
     "keyboard",
-    "shortcuts"
+    "shortcuts",
+    "keymap",
+    "display"
   ],
   "activationCommands": {
     "atom-workspace": "keymap-display:toggle"
